--- a/index.html
+++ b/index.html
@@ -54,44 +54,6 @@
                             <nav class="main-menu collapse navbar-collapse">
                                 <ul>
                                     <li class="menu-item-has-children has-mega-menu"><a href="index.html">Home</a>
-                                        <ul class="submenu mega-menu">
-                                            <li>
-                                                <div class="mega-menu-content mxw_1505">
-                                                    <div class="row">
-                                                        <div class="col col-md-3">
-                                                            <div class="demo-pic">
-                                                                <a href="index.html">
-                                                                    <img src="assets/img/demo/demo-1.jpg" alt="">
-                                                                </a>
-                                                            </div>
-                                                            <h3>Blockchain</h3>
-                                                        </div>
-                                                        <div class="col col-md-3">
-                                                            <div class="demo-pic">
-                                                                <a href="home-2.html">
-                                                                    <img src="assets/img/demo/demo-2.jpg" alt="">
-                                                                </a>
-                                                            </div>
-                                                            <h3>Bitcoin Mining</h3>
-                                                        </div>
-                                                        <div class="col col-md-3">
-                                                            <div class="demo-pic">
-                                                                <a href="home-3.html">
-                                                                    <img src="assets/img/demo/demo-3.jpg" alt="">
-                                                                </a>
-                                                            </div>
-                                                            <h3>ICO</h3>
-                                                        </div>
-                                                        <div class="col col-md-3">
-                                                            <div class="demo-pic coming-soon">
-                                                                <img src="assets/img/demo/coming-soon.jpg" alt="">
-                                                            </div>
-                                                            <h3>Coming Soon</h3>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li><a class="scrollspy-btn" href="#feature">Feature</a></li>
                                     <li><a class="scrollspy-btn" href="#team">Team</a></li>
@@ -161,11 +123,11 @@
                 </div>
                 <ul id="mobile-menu-active">
                     <li class="dropdown"><a href="index.html"><span>Home</span></a>
-                        <ul class="sub-menu">
+                        <!-- <ul class="sub-menu">
                             <li class="active"><a href="index.html"><span>Home Blockchain</span></a></li>
                             <li><a href="home-2.html"><span>Home Mining</span></a></li>
                             <li><a href="home-3.html"><span>Home ICO</span></a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li><a class="scrollspy-btn" href="#feature"><span>Feature</span></a></li>
                     <li><a class="scrollspy-btn" href="#team"><span>Team</span></a></li>
